--- a/index.html
+++ b/index.html
@@ -51,6 +51,56 @@
         </div>
        </div>
        <hr>
+      <article>
+        <h2 class="section-title">Top blogs</h2>
+        <div class="blogs">
+            <article class="blog">
+                <div class="thumnail">
+                    <img src="images/blogs/blog-1.png" alt="">
+                </div>
+                <div class="blog-info">
+                    <h3 class="blog-title">13 of My Favorite
+                        UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                </div>
+            </article>
+            <article class="blog">
+                <div class="thumnail">
+                    <img src="images/blogs/blog-2.png" alt="">
+                </div>
+                <div class="blog-info">
+                    <h3 class="blog-title">13 of My Favorite
+                        UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                </div>
+            </article>
+            <article class="blog">
+                <div class="thumnail">
+                    <img src="images/blogs/blog-3.png" alt="">
+                </div>
+                <div class="blog-info">
+                    <h3 class="blog-title">13 of My Favorite
+                        UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                </div>
+            </article>
+            <article class="blog">
+                <div class="thumnail">
+                    <img src="images/blogs/blog-4.png" alt="">
+                </div>
+                <div class="blog-info">
+                    <h3 class="blog-title">13 of My Favorite
+                        UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>
+                </div>
+            </article>
+        </div>
+      </article>
+    </section>
+       <!-- latest courses  -->
+
+    <section>
+        <h2 class="section-title"></h2>
     </section>
    </main>
     <!-- main end   -->
